@@ -1,6 +1,7 @@
 ver 0.16.6 (2010/??/??)
 * event_pipe: fix WIN32 regression
 * define WINVER in ./configure
+* WIN32: autodetect filesystem encoding
 
 
 ver 0.16.5 (2010/10/09)
